
using UnityEngine;

namespace AutoAnimaker
{
    public static class Constants
    {
        /** Animator Parameters **/
        public static readonly string ANIM_PARAM_IDLE       = "isIdle";
        public static readonly string ANIM_PARAM_SPAWN      = "isSpawn";
        public static readonly string ANIM_PARAM_HIT        = "isHit";
        public static readonly string ANIM_PARAM_WALK       = "isWalk";
        public static readonly string ANIM_PARAM_RUN        = "isRun";
        public static readonly string ANIM_PARAM_ROLL       = "isRoll";
        public static readonly string ANIM_PARAM_DIE        = "isDie";

        /** Basic Settings (could be changed) **/
        public static readonly string PATH_BASIC = Application.dataPath;

    }
}